fixed console errors deleted whitespaces

--- a/src/app/ubs-admin/components/ubs-admin-tariffs/ubs-admin-tariffs-add-service-popup/ubs-admin-tariffs-add-service-popup.component.scss
+++ b/src/app/ubs-admin/components/ubs-admin-tariffs/ubs-admin-tariffs-add-service-popup/ubs-admin-tariffs-add-service-popup.component.scss
@@ -125,7 +125,7 @@ input.ng-touched.ng-invalid {
 
 .close-button {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   img {
     width: 25px;
